--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@reduxjs/toolkit": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.1"
+    "react-redux": "^8.0.1",
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.23.3",
