--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "npx tsc && vite build",
     "preview": "vite preview",
     "test": "jest",
     "format": "prettier --write .",
@@ -27,7 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
-    "tsc": "^2.0.4"
+    "tsc": "^5.3.3"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.23.3",
@@ -49,7 +49,7 @@
     "prettier": "^2.7.1",
     "prettier-config-nick": "^1.0.2",
     "redux-mock-store": "^1.5.4",
-    "typescript": "^5.0.2",
+    "typescript": "^5.3.2",
     "vite": "^4.0.0",
     "vitest": "^0.30.1"
   },
