--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
-    "tsc": "^5.3.3"
+    "tsc": "^5.3.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.23.3",
@@ -67,5 +67,7 @@
     }
   },
   "prettier": "prettier-config-nick",
-  "homepage": "https://jayteex.github.io/react-redux-reddit-jsonapi/"
+  "engines": {
+    "npm": "latest"
+  }
 }
